Flex on Safari fix
More responsive flex that works in all browsers - columns take 100% of width instead of changing flex-direction

--- a/css/media.css
+++ b/css/media.css
@@ -5,10 +5,9 @@
     }
 
     /* Flex */
-    .flex-container .row,
-    .flex-container .row-reverse {
-        flex-direction: column;
-        flex: 1 1 0px;
+    .flex-container .column {
+        flex: 100%;
+        max-width: 100%;
     }
 
     /* Hero image */
